# ConcordoProjeto

./: CMakeLists.txt  README.md  documentacao
html/: annotated.html  canal_8hpp_source.html  canaltexto_8hpp_source.html  canalvoz_8hpp_source.html  classCanal-members.html  classCanal.html  classCanalTexto-members.html  classCanalTexto.html  classCanalTexto__coll__graph.dot  classCanalTexto__inherit__graph.dot  classCanalVoz-members.html  classCanalVoz.html  classCanalVoz__coll__graph.dot  classCanalVoz__inherit__graph.dot  classCanal__inherit__graph.dot  classMensagem-members.html  classMensagem.html  classServidor-members.html  classServidor.html  classSistema-members.html  classSistema.html  classUsuario-members.html  classUsuario.html  classes.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_29e4a8786251bc02b89c6746e658faf4.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5ccf6f5f6f8f5a0c68d52188c0c1e2bd.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_70e399281a8abf897cf43298fd75dca2.html  dir_9f6dc51727e6b8aa9896b3ff5053853f.html  dir_c787e787158fd710b46a5bbd2f616188.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_de32dd3361977312409fd00525749d9c.html  dir_df8eb9bc10281dc443a297b095ffe48c.html  dir_e1a715d407a4074a9fa63b2e02ec2b8f.html  dir_e50b5e596ea7fd3b3876850f33cb4b65.html  dir_ee532ceb613f48f23d20ef02624c3a91.html  files.html  (+18 more)
include/: canal.hpp  canaltexto.hpp  canalvoz.hpp  mensagem.hpp  servidor.hpp  sistema.hpp  usuario.hpp
latex/: annotated.tex  classCanal.tex  classCanal.tex.tmp  refman.tex  (+12 more)
(+31 files in other folders)
